--- a/project/app.less
+++ b/project/app.less
@@ -4,9 +4,11 @@
 @import "variables.less";
 /* Add App LESS files below */
 @import "src/app/home/home.less";
+@import "src/app/exo03/exo03.less";
+@import "src/app/exo03/detail-partial/detail.less";
 
 /* Add Fonts below */
-@fa-font-path: "bower_components/font-awesome/fonts";
+@fa-font-path: "bower_components/font-awesome/fonts"; 
 
 body {
   font-family: 'Roboto', "Helvetica Neue", Helvetica, Arial, sans-serif;
