--- a/project/src/app/exo03/exo03.html
+++ b/project/src/app/exo03/exo03.html
@@ -1,10 +1,14 @@
-<div class="conteneur">
-<div class="element" id="listeFilms">
-  <ul>
-  <li ng-repeat="film in exo03.films"><img src="{{film.img}}" ng-class="{'bordure': film.name === exo03.selectItem.name}" ng-click="exo03.Selection($index)"/></li>
-</ul>
-</div>
-<div class="element" id="detailFilm">
-  <ng-include src="'src/app/exo03/detail-partial/detail.html'"></ng-include>
-</div>
+<div id="conteneur">
+	<div id="listeFilmes" class="items">
+		
+		<ul>
+			<li ng-repeat="nom in exo03.films">
+       <img src="{{nom.img}}" ng-click="exo03.Selection($index)" ng-class="{'border-pink': nom.name === exo03.selectItem.name}"/>
+     </li>
+		</ul>
+	</div>
+
+	<div id="detailFilm" class="items">
+		<ng-include src="'src/app/exo03/detail-partial/detail.html'"></ng-include>
+	</div>
 </div>
