--- a/project/app.less
+++ b/project/app.less
@@ -6,9 +6,11 @@
 @import "src/app/home/home.less";
 @import "src/app/exo03/exo03.less";
 @import "src/app/exo03/detail-partial/detail.less";
+@import "src/app/exo04/exo04.less";
+
 
 /* Add Fonts below */
-@fa-font-path: "bower_components/font-awesome/fonts"; 
+@fa-font-path: "bower_components/font-awesome/fonts";
 
 body {
   font-family: 'Roboto', "Helvetica Neue", Helvetica, Arial, sans-serif;
