--- a/project/src/app/exo03/exo03.less
+++ b/project/src/app/exo03/exo03.less
@@ -1,25 +1,49 @@
-.element {
-  height: 720px;
-  text-align: center;
-  flex-grow: 1;
+
+#home-page {
+  display: table;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+
+  .gameTitle {
+    .title {
+      font-size: 42px;
+    }
   }
 
-.conteneur
-{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+  .vertical-center {
+    display: table-cell;
+    vertical-align: middle;
+  }
+
+  .centralDiv {
+    margin-left: auto;
+    margin-right:auto;
+    text-align:center;
+    width: 740px;
+    padding: 60px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.5);
+  }
+
 }
 
-#listeFilms {
-  background-color: green;
-}
-#detailFilm {
-  background-color: orange;
+#conteneur {
+	display: flex;
+	flex-direction: row;
+	height: 752px;
+	justify-content: space-around;
 }
 
-.bordure {
-  border-style: solid;
-  border-width: 5px;
-  border-color: pink;
+
+.items {
+	flex-grow: 1;
+}
+.img_film {
+
+  height : 250px;
+}
+
+.border-pink{
+  border: solid 4px pink;
+  
 }
